--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,10 @@
     <servlet-name>sauvServlet</servlet-name>
     <servlet-class>fr.ensai.projet.server.EssaiSauvegardeImpl</servlet-class>
   </servlet>
+    <servlet>
+    <servlet-name>chargServlet</servlet-name>
+    <servlet-class>fr.ensai.projet.server.ChargementImpl</servlet-class>
+  </servlet>
 
   <servlet-mapping>
     <servlet-name>greetServlet</servlet-name>
@@ -22,6 +26,10 @@
    <servlet-mapping>
     <servlet-name>sauvServlet</servlet-name>
     <url-pattern>/projetgl/EssaiSauvegarde</url-pattern>
+  </servlet-mapping>
+    <servlet-mapping>
+    <servlet-name>Chargement</servlet-name>
+    <url-pattern>/projetgl/Chargement</url-pattern>
   </servlet-mapping>
 
   <!-- Default page to serve -->
